<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FaceVault Sample</string>
    <string name="btn_enroll">Enroll Person</string>
    <string name="btn_search_photo">Search by Photo</string>
    <string name="btn_find_all">Find All in Photo</string>
    <string name="btn_find_from_list">Find from List</string>
    <string name="result_hint">Pick an action above. Results appear here.</string>
    <string name="picked_image">Selected image</string>
</resources>
